<resources>

    <string name="app_name">Neighbor</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Neighbor</string>
    <string name="spinnerString_Browser">Search Options</string>
     <string-array name="spinnerArray_Browser">
        <item>All products</item>
        <item>Only Offers</item>
    </string-array>
        <string name="question_browser">Wich Product are you looking for?</string>
        <string name="etHint_Browser">Type any product</string>
        <string name="btnSearch_Browser">Search</string>
        <string name="recordarsmarthphone_Splash">Remember SmarthPhone</string>
        <string name="entrar_Splash">Log In</string>
        <string name="tvUsuario_Splash">User</string>
        <string name="tvPassword_Search">Password</string>
        <string name="newAccountQuestion_Splash">Don\'t you have an account?</string>

</resources>