<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#1D4A82" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_browser"
        android:textSize="40dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etHint_Browser" />
<LinearLayout 
    android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btnSearch_Browser"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btnSearch_Browser" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinnerString_Browser"
        android:entries="@array/spinnerArray_Browser" />
    </LinearLayout>

</LinearLayout>